After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677945 - nautilus segfaults in nautilus_window_menus_set_visibility_for_app_menu()
nautilus segfaults in nautilus_window_menus_set_visibility_for_app_menu()
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Navigation
3.5.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-12 13:42 UTC by Sebastien Bacher
Modified: 2012-06-12 16:05 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastien Bacher 2012-06-12 13:42:33 UTC
The issue has been reported on https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/1003771

"nautilus 3.5.1

oddly this happened for me while trying to take a screenshot to report a different bug. screenshot crashed out and I ended up here... Doesn't seem relevant unless it's because I was in the process of selecting an area to grab and that intersected nautilus/appmenu.

  • #0 nautilus_window_menus_set_visibility_for_app_menu
    at nautilus-window-menus.c line 1118
  • #1 g_closure_invoke
    at /build/buildd/glib2.0-2.33.1/./gobject/gclosure.c line 777
  • #2 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.33.1/./gobject/gsignal.c line 3547
  • #3 g_signal_emit_valist
    at /build/buildd/glib2.0-2.33.1/./gobject/gsignal.c line 3296
  • #4 g_signal_emit
    at /build/buildd/glib2.0-2.33.1/./gobject/gsignal.c line 3352
  • #5 g_object_dispatch_properties_changed
    at /build/buildd/glib2.0-2.33.1/./gobject/gobject.c line 1041
  • #6 g_object_notify_by_spec_internal
    at /build/buildd/glib2.0-2.33.1/./gobject/gobject.c line 1133
  • #7 g_object_notify
    at /build/buildd/glib2.0-2.33.1/./gobject/gobject.c line 1175
  • #8 _gtk_settings_handle_event
    at /build/buildd/gtk+3.0-3.4.2/./gtk/gtksettings.c line 2528
  • #9 gtk_main_do_event
    at /build/buildd/gtk+3.0-3.4.2/./gtk/gtkmain.c line 1498
  • #10 gdk_event_source_dispatch
    at /build/buildd/gtk+3.0-3.4.2/./gdk/x11/gdkeventsource.c line 358
  • #11 g_main_dispatch
    at /build/buildd/glib2.0-2.33.1/./glib/gmain.c line 2539
  • #12 g_main_context_dispatch
    at /build/buildd/glib2.0-2.33.1/./glib/gmain.c line 3075
  • #13 g_main_context_iterate
    at /build/buildd/glib2.0-2.33.1/./glib/gmain.c line 3146
  • #14 g_main_context_iteration
    at /build/buildd/glib2.0-2.33.1/./glib/gmain.c line 3207
  • #15 g_application_run
    at /build/buildd/glib2.0-2.33.1/./gio/gapplication.c line 1570
  • #16 main
    at nautilus-main.c line 103

Comment 1 Cosimo Cecchi 2012-06-12 16:05:36 UTC
Thanks for the report, I pushed a fix to git master now.