window-menus: disconnect from GtkSettings notifications on finalize

Or if something (e.g. another process via xsettings) causes the
GtkSettings to change the value of gtk-shell-shows-app-menu after a
window is finalized, our callback will run and we'll crash trying to
access freed memory.

https://bugzilla.gnome.org/show_bug.cgi?id=677945