src/nautilus-window-private.h
@@ -97,6 +97,7 @@ struct NautilusWindowDetails
         gboolean disable_chrome;
 
         guint sidebar_width_handler_id;
+        guint app_menu_visibility_id;
 };
 
 /* window geometry */
